@@ -1,73 +1,0 @@
-<option type="enum" id="opt/epsonepl-PrintoutMode">
-  <!-- A multilingual <comments> block can appear here, too;
-       it should be treated as documentation for the user. -->
-  <arg_longname>
-   <en>Printout Mode</en>
-  </arg_longname>
-  <arg_shortname>
-   <en>PrintoutMode</en><!-- backends only know <en> shortnames! -->
-  </arg_shortname>
-  <arg_execution>
-   <arg_group>General</arg_group>
-   <arg_order>10</arg_order>
-   <arg_section>AnySetup</arg_section>
-   <arg_spot>A</arg_spot>
-   <arg_composite />
-   <!-- <arg_proto></arg_proto> -->
-  </arg_execution>
-  <constraints>
-     <constraint sense="true">
-      <driver>epl5700l</driver>
-      <arg_defval>ev/epsonepl-PrintoutMode-Normal</arg_defval>
-     </constraint>
-     <constraint sense="true">
-      <driver>epl5800l</driver>
-      <arg_defval>ev/epsonepl-PrintoutMode-Normal</arg_defval>
-     </constraint>
-     <constraint sense="true">
-      <driver>epl5900l</driver>
-      <arg_defval>ev/epsonepl-PrintoutMode-Normal</arg_defval>
-     </constraint>
-  </constraints>
-  <enum_vals>
-   <enum_val id="ev/epsonepl-PrintoutMode-Draft">
-    <ev_longname>
-     <en>Draft (Economy)</en>
-    </ev_longname>
-    <!-- A multilingual <comments> block can appear here, too;
-         it should be treated as documentation for the user. -->
-    <ev_shortname>
-     <en>Draft</en>
-     <!-- Until someone tells me how to learn the user locale in 
-          backends, the shortname must be monolingual in <en>! -->
-    </ev_shortname>
-    <ev_driverval>Dpi=300x300dpi Ritech=Off TonerSave=On</ev_driverval>
-   </enum_val>
-   <enum_val id="ev/epsonepl-PrintoutMode-Normal">
-    <ev_longname>
-     <en>Normal</en>
-    </ev_longname>
-    <!-- A multilingual <comments> block can appear here, too;
-         it should be treated as documentation for the user. -->
-    <ev_shortname>
-     <en>Normal</en>
-     <!-- Until someone tells me how to learn the user locale in 
-          backends, the shortname must be monolingual in <en>! -->
-    </ev_shortname>
-    <ev_driverval>Dpi=600x600dpi Ritech=On TonerSave=Off</ev_driverval>
-   </enum_val>
-   <enum_val id="ev/epsonepl-PrintoutMode-High">
-    <ev_longname>
-     <en>High Quality</en>
-    </ev_longname>
-    <!-- A multilingual <comments> block can appear here, too;
-         it should be treated as documentation for the user. -->
-    <ev_shortname>
-     <en>High</en>
-     <!-- Until someone tells me how to learn the user locale in 
-          backends, the shortname must be monolingual in <en>! -->
-    </ev_shortname>
-    <ev_driverval>Dpi=1200x600dpi Ritech=On TonerSave=Off</ev_driverval>
-   </enum_val>
-  </enum_vals>
-</option>
