@@ -775,6 +775,24 @@ pl_to_epljobinfo (Epson_EPL_ParamList *pl, IjsPageHeader ph, EPL_job_info *epl_j
 	  (double)epl_job_info->pixel_h / epl_job_info->dpi_h,
 	  (double)epl_job_info->pixel_v / epl_job_info->dpi_v);
 
+  epl_job_info->bytes_per_row = (ph.n_chan * ph.bps * ph.width + 8 - 1) / 8 ;
+#ifdef STRIPE_OVERFLOW_WORKAROUND
+  /*
+   * We increase bytes_per_row.
+   * This trick apparently works around a suspected bug in the printer
+   * firmware.
+   */
+  epl_job_info->bytes_per_row_2 = epl_job_info->bytes_per_row * 5 / 4 + 1;
+#else
+  epl_job_info->bytes_per_row_2 = epl_job_info->bytes_per_row;
+#endif
+  epl_job_info->bytes_per_row_2 = (epl_job_info->bytes_per_row_2 + 4 - 1) / 4 * 4; 
+      fprintf(stderr, "  Byte_per_row %i, byte_per_row_2 %i\n",
+              epl_job_info->bytes_per_row,
+              epl_job_info->bytes_per_row_2);
+  /* last one may have to be padded */
+  epl_job_info->total_stripes = (ph.height + 64 - 1) / 64;
+
   /* Dpi of the bitmap */
   if (ph.xres != (double)epl_job_info->dpi_h
       || ph.yres != (double)epl_job_info->dpi_v)
@@ -886,8 +904,6 @@ main (int argc, char **argv)
       char *ptr_row_prev;
       char *ptr_row_current;
       
-      int bytes_per_row;
-      int total_stripes;
       int i_stripe;
       typ_stream *stream;
       
@@ -954,29 +970,27 @@ main (int argc, char **argv)
           exit (1);
         }
       
-      bytes_per_row = (ph.n_chan * ph.bps * ph.width + 8 - 1) / 8 ;
-      total_bytes = bytes_per_row * ph.height;
-      total_stripes = (ph.height + 64 - 1) / 64;		/* last one may have to be padded */
+      total_bytes = epl_job_info->bytes_per_row * ph.height;
       
       stream = (typ_stream *)malloc(sizeof(typ_stream)); 
-
       /* 25% + 2, + 1 for rounding error */
-      stream->start = (char *)malloc(total_bytes * 1.25 + 2 + 1);
-      
-      ptr_row_prev = (char *)malloc(bytes_per_row);
-      ptr_row_current = (char *)malloc(bytes_per_row);
+      stream->start = (char *)malloc(epl_job_info->bytes_per_row_2 * 64 * 5 / 4 + 2 + 1);
+
+      ptr_row_prev = (char *)malloc(epl_job_info->bytes_per_row_2);
+      ptr_row_current = (char *)malloc(epl_job_info->bytes_per_row_2);
       
       bytes_left = total_bytes;
       
-      for (i_stripe = 0 ; i_stripe < total_stripes ; i_stripe++)
+      for (i_stripe = 0 ; i_stripe < epl_job_info->total_stripes ; i_stripe++)
 	{
 	  int i, i_row;
 
 	  stream_init(stream);
 	  
-	  /* clear previous row at stripe start */
-	  for (i = 0 ; i < bytes_per_row ; i++)
+	  /* clear both rows at stripe start */
+	  for (i = 0 ; i < epl_job_info->bytes_per_row_2 ; i++)
 	    {
+	      *(ptr_row_current + i) = (char) 0xff;
 	      *(ptr_row_prev + i) = (char) 0xff;
 	    }
 	  
@@ -993,10 +1007,14 @@ main (int argc, char **argv)
 #endif	      
 
 #ifdef VERBOSE
-	      fprintf (stderr, "%d bytes left, reading %d\n", bytes_left, bytes_per_row);
+	      fprintf (stderr, "%d bytes left, reading %d\n",
+	               bytes_left,
+		       epl_job_info->bytes_per_row);
 #endif	      
-	      status = ijs_server_get_data (ctx, ptr_row_current, bytes_per_row);
-	      bytes_left -= bytes_per_row;
+	      status = ijs_server_get_data (ctx,
+	                                    ptr_row_current,
+	                                    epl_job_info->bytes_per_row);
+	      bytes_left -= epl_job_info->bytes_per_row;
 
 	      if (status)
 		{
@@ -1009,12 +1027,15 @@ main (int argc, char **argv)
 #ifdef EPL_DEBUG
 	          fprintf (stderr, "stripe %d, row %d (padding)\n", i_stripe, i_row);
 #endif	      
-		  memcpy (ptr_row_current, ptr_row_prev, bytes_per_row); /* repeat last line */
+		  memcpy (ptr_row_current,
+		          ptr_row_prev,
+			  epl_job_info->bytes_per_row_2); /* repeat last line */
 		}
 	      
 	      epl_compress_row(stream,
 			       ptr_row_current,
-			       ptr_row_prev, bytes_per_row);	      
+			       ptr_row_prev,
+			       epl_job_info->bytes_per_row_2);	      
 	      ptr_temp = ptr_row_current;
 	      ptr_row_current = ptr_row_prev;
 	      ptr_row_prev = ptr_temp;
