@@ -1,7 +1,13 @@
-2003-03-10: 0.2.3 - Roberto Ragusa
+2003-03-13: cvs - Roberto Ragusa
+   . Compilation options in epl_config.h.
+   . Protocol changes to work around printer crashes.
+   . Removed epsonepl-PrintoutMode.xml composite option.
+   . Misc fixes.
+
+2003-03-10: cvs - Roberto Ragusa
    . Modifications to the foomatic stuff and spec file.
 
-2003-02-28: 0.2.3cvs - Hin-Tak Leung
+2003-02-28: cvs - Hin-Tak Leung
    . Merged in USB-related code, 
         configure now accepts --with-kerneldevice,--with-libusb
    . documentation update regarding USB and the 4-bit code.
